--- a/SimonProject/Properties/Resources.resx
+++ b/SimonProject/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="Ding" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Elevator Ding-SoundBible.com-685385892.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
